roles/monitoring/files/viya4-monitoring-kubernetes/samples/namespace-monitoring/monitoring/prometheus-viya-one.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: prometheus
    self-monitor: "true"
  name: prometheus
spec:
  type: ClusterIP
  ports:
  - name: web
    port: 9090
    protocol: TCP
    targetPort: 9090
  selector:
    app: prometheus
    prometheus: prometheus-viya
  sessionAffinity: None
---
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: prometheus
spec:
  rules:
  - host: prometheus.viya-one.host.cluster.example.com
    http:
      paths:
      - backend:
          serviceName: prometheus
          servicePort: 9090
        path: /
